--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -1,7 +1,13 @@
-csacdcdc
-csc
-s
-cs
-cs
-c
-scs
+#EXTM3U
+
+################################################################################# VIPS
+
+#EXTINF:-1 tvg-id="" tvg-logo="http://i.imgur.com/u8eRrGT.png" group-title="CANAIS VIPS",[B][COLOR dodgerblue]|||[/COLOR][COLOR white]|||[/COLOR][COLOR dodgerblue]|||[/COLOR] [COLOR white]CANAIS VIPS[/COLOR][/B]
+here
+
+#EXTINF: -1, Dorcel TV
+http://185.231.160.35/932/1/index.m3u8
+#EXTINF: -1, ??????? ????
+http://185.231.160.35/267/2/index.m3u8
+#EXTINF: -1, Crepúsculo
+http://185.231.160.35/362/2/index.m3u8
