--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -5,7 +5,7 @@
 #EXTINF:-1 tvg-id="" tvg-logo="http://i.imgur.com/u8eRrGT.png" group-title="CANAIS VIPS",[B][COLOR dodgerblue]|||[/COLOR][COLOR white]|||[/COLOR][COLOR dodgerblue]|||[/COLOR] [COLOR white]CANAIS VIPS[/COLOR][/B]
 here
 
-#EXTINF: -1, Dorcel TV
+#EXTINF: -1, hercules TV
 https://player.vimeo.com/video/206290433
 #EXTINF: -1, ??????? ????
 http://185.231.160.35/267/2/index.m3u8
