--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -2,7 +2,7 @@
  
 <item>
 <title>1º Telefilme / Hercules e as mulheres amazonas</title>
-[vimeo]https://player.vimeo.com/video/206290433[/vimeo]
+<vimeo>https://player.vimeo.com/video/206290433</vimeo>
 <thumbnail>http://3.bp.blogspot.com/-u5l2H4-XvZA/VILEjscB3zI/AAAAAAAAE5E/DBuSDbl-qeE/s1600/3381Hercules_season2_EN.jpg</thumbnail>
 <info>1º Telefilme / Hercules e as mulheres amazonas</info>
 </item>
